index.html: Improve wording of history section

--- a/intro.html
+++ b/intro.html
@@ -109,23 +109,23 @@
 
 <p>Whilst JavaScript is a good tool to let you introspect the properties of the DOM
  and to do certain client-side observations that you would otherwise not be able to do,
- it falls short on being able to naturally replicate a user's interactions
+ it falls short on the ability to naturally replicate a user's interactions
  as if the mouse and keyboard is being used.
 
 <p>Since then Selenium has grown and matured a lot,
- into a tool widely used by many – if not most –
- of the largest organizations around the world.
- Selenium has gone from a homebrewed test automation toolkit at Thoughtworks
+ into a tool widely used by many&mdash;if not most&mdash;of
+ the largest organisations around the world.
+ Selenium has gone from a homebrewed test automation toolkit developed at Thoughtworks
  for a niché audience and a specific use case,
- to become the world's de facto browser automation library.
+ to become the world's <em>de facto</em> browser automation library.
 
-<p>Just as Selenium 1 made use of the tools of the trade available at the time,
- Selenium 2 drives that tradition on by taking
+<p>Just as Selenium RC made use of the tools of the trade available at the time,
+ <a href=wd.html>Selenium WebDriver</a> drives that tradition on by taking
  the browser interaction part to the browser vendor's home turf,
  and asking them to take responsibility of the backend, browser-facing implementations.
- Recently this work has evolved into a W3C standardization process
+ Recently this work has evolved into a W3C standardisation process
  where the goal is to turn the WebDriver component in Selenium
- into a <em>de jeur</em> remote control library for browsers.
+ into the <em>du jeur</em> remote control library for user agents.
 
 
 <h2>On Test Automation</h2>
