wd.html: Add section on waits and explicit wait

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ search_box.submit()</code></pre>
   <ul>
    <li><a href=wd.html#driver_requirements>Driver Requirements</a>
    <li><a href=wd.html#browser_launching_and_manipulation>Browser Launching and Manipulation</a>
-   <li><a href=wd.html#waits_implicit_and_explicit>Waits (Implicit and Explicit)</a>
+   <li><a href=wd.html#waits>Waits</a>
    <li><a href=wd.html#support_classes>Support Classes</a>
    <li><a href=wd.html#http_proxies>HTTP Proxies</a>
   </ul></li>
