--- a/intro.html
+++ b/intro.html
@@ -151,12 +151,14 @@
  <li>Evaluate the results
 </ol>
 
-<p>You will want to keep these steps as short as possible –
+<p>You will want to keep these steps as short as possible;
  one to two operations should be enough much of the time.
  Browser automation has the reputation of being “flaky”,
  but in reality that is because users frequently demand too much of it.
  In later chapters we will return to techniques you can use
- to mitigate intermittent problems in tests.
+ to mitigate apparent intermittent problems in tests,
+ in particular on how to <a href=wd.html#waits>overcome race conditions</a>
+ between the browser and WebDriver.
 
 <p>By keeping your tests short,
  and by using the web browser only when you have absolutely no alternative,
