intro: Break long paragraph into two

--- a/intro.html
+++ b/intro.html
@@ -89,7 +89,8 @@
  Being an open source project,
  this support is provided through the generous donation of time from many volunteers,
  every one of which has a “day job”.
- Another mission of the project is to encourage
+
+<p>Another mission of the project is to encourage
  more volunteers to partake in this effort,
  and build a strong community
  so that the project can continue to keep up with emerging technologies
