--- a/attr.html
+++ b/attr.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
 <link href=se.css rel=stylesheet>
-<link href=javasupport.html rel=prev title="The Java Support Package">
-<link href=conventions.html rel=next title="Typographical Conventions">
+<link href=java.html title="The Java Support Package" rel=prev>
+<link href=conventions.html title="Typographical Conventions" rel=next>
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
