--- a/drivers.html
+++ b/drivers.html
@@ -3,7 +3,7 @@
 <title>Driver Idiosyncrasies</title>
 <link rel=stylesheet href=se.css>
 <link rel=prev href=grid.html title=Grid>
-<link rel=next href=javasupport.html title="The Java Support Package">
+<link rel=next href=java.html title="The Java Support Package">
 <script src=docs.js></script>
 
 <h1>Driver Idiosyncrasies</h1>
