--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
 <link href=se.css rel=stylesheet>
-<link href=quick.html rel=next title="Quick Tour">
+<link href=quick.html title="Quick Tour" rel=next>
 <script src=docs.js></script>
 
 <body class=front>
@@ -130,10 +130,10 @@ search_box.submit()</code></pre>
    <li><a href=drivers.html#shared_capabilities>Shared capabilities</a>
    <li><a href=drivers.html#driver_specific_capabilities>Driver specific capabilities</a>
   </ul></li>
- <li><a href=javasupport.html#the_java_support_package>The Java Support Package</a>
+ <li><a href=java.html#the_java_support_package>The Java Support Package</a>
   <ul>
-   <li><a href=javasupport.html#working_with_colours>Working With Colours</a>
-   <li><a href=javasupport.html#working_with>Working With</a>
+   <li><a href=java.html#working_with_colours>Working With Colours</a>
+   <li><a href=java.html#working_with>Working With</a>
   </ul></li>
 </ul>
 </div>
