--- a/attr.html
+++ b/attr.html
@@ -2,7 +2,7 @@
 <title>Copyright and Attributions</title>
 <link href=se.css rel=stylesheet>
 <link href=java.html title="The Java Support Package" rel=prev>
-<link href=conventions.html title="Typographical Conventions" rel=next>
+<link href=typo.html title="Typographical Conventions" rel=next>
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
