--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@ search_box.submit()</code></pre>
    <li><a href=attr.html#html_version_and_source_code>HTML Version and Source Code</a>
    <li><a href=attr.html#license>License</a>
   </ul></li>
- <li><a href=conventions.html#typographical_conventions>Typographical Conventions</a>
+ <li><a href=typo.html#typographical_conventions>Typographical Conventions</a>
 </ul>
 </div>
