make all, regenerating toc; adding test [in]dependency sections to best/worst

--- a/attr.html
+++ b/attr.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
-<link href=se.css rel=stylesheet>
-<link href=java.html title="The Java Support Package" rel=prev>
-<link href=typo.html title="Typographical Conventions" rel=next>
+<link rel=stylesheet href=se.css>
+<link title="The Java Support Package" rel=prev href=java.html>
+<link title="Typographical Conventions" rel=next href=typo.html>
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
@@ -35,6 +35,7 @@
  <li><a href=mailto:botalov.andrey@gmail.com>Andrey Botalov</a>
  <li><a href=mailto:brknthmb@gmail.com>Dan Chan</a>
  <li><a href=mailto:danforkosh@yahoo.com>sheg</a>
+ <li><a href=mailto:daniel.jj.davison@gmail.com>Daniel Davison</a>
  <li><a href=mailto:dave.hunt@gmail.com>Dave Hunt</a>
  <li><a href=mailto:djangofan@gmail.com>djangofan</a>
  <li><a href=mailto:djangofan@gmail.com>Jon Thor Austen</a>
@@ -70,7 +71,7 @@
 <p>An HTML version of this documentation is freely available from
  <a href=//seleniumhq.github.io/docs>https://seleniumhq.github.io/docs</a>.
 
-<p>The source code for the examples inlucded
+<p>The source code for the examples included,
  and for the book itself is available from the Selenium documentation repository
  at <a href=//github.com/seleniumhq/docs>https://github.com/seleniumhq/docs</a>.
  See instructions on how to check out the code via git at
