--- a/best.html
+++ b/best.html
@@ -171,6 +171,10 @@ for more information regarding report outputs for several languages.
 
 <h2>Avoid Sharing State</h2>
 
+<h2>Test Independency</h2>
+<p>
+  Write each test as its own unit.  Write the tests in a way that won't be reliant on other tests to complete.
+</p>
 
 <h2>Consider Using a Fluent API</h2>
 
