--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
-<link href=se.css rel=stylesheet>
-<link href=quick.html title="Quick Tour" rel=next>
+<link rel=stylesheet href=se.css>
+<link title="Quick Tour" rel=next href=quick.html>
 <script src=docs.js></script>
 
 <body class=front>
@@ -19,7 +19,7 @@
 
 <p>The project is made possible by volunteer contributors
  who have put in thousands of hours of their own time,
- and made the source code <a href=license.html>freely available</a>
+ and made the source code <a href=attr.html#license>freely available</a>
  for anyone to use, enjoy, and improve.
 
 <p>Selenium brings together browser vendors, engineers, and enthusiasts
@@ -107,6 +107,7 @@ search_box.submit()</code></pre>
    <li><a href=best.html#mock_external_services>Mock External Services</a>
    <li><a href=best.html#improved_reporting>Improved Reporting</a>
    <li><a href=best.html#avoid_sharing_state>Avoid Sharing State</a>
+   <li><a href=best.html#test_independency>Test Independency</a>
    <li><a href=best.html#consider_using_a_fluent_api>Consider Using a Fluent API</a>
    <li><a href=best.html#fresh_browser_per_test>Fresh Browser Per Test</a>
   </ul></li>
@@ -116,6 +117,7 @@ search_box.submit()</code></pre>
    <li><a href=worst.html#file_downloads>File Downloads</a>
    <li><a href=worst.html#http_response_codes>HTTP Response Codes</a>
    <li><a href=worst.html#gmail_email_and_facebook_logins>Gmail, Email, and Facebook Logins</a>
+   <li><a href=worst.html#test_dependency>Test Dependency</a>
    <li><a href=worst.html#performance_testing>Performance Testing</a>
    <li><a href=worst.html#link_spidering>Link Spidering</a>
   </ul></li>
