--- a/worst.html
+++ b/worst.html
@@ -86,6 +86,12 @@ test increases the risk of your test failing because it makes your
 test longer. A general rule of thumb is that longer tests are more
 fragile and unreliable.
 
+<h2>Test Dependency</h2>
+<p>
+  A common idea and misconception about automated testing is regarding a
+  specific test order. Your tests should be able to run in <strong>any</strong> order,
+  and not rely on other tests to complete in order to be successful.
+</p>
 
 <h2>Performance Testing</h2>
 
