adding double quotes and protocol to href

--- a/wd.html
+++ b/wd.html
@@ -37,7 +37,7 @@
   like the file upload or download, pop-ups, and dialogs barrier.
 
  <li>WebDriver overcomes the limitation of Selenium RC's
-  <a href=//en.wikipedia.org/wiki/Same-origin_policy>single-host origin policy.</a>
+  <a href="https://en.wikipedia.org/wiki/Same-origin_policy">single-host origin policy.</a>
 </ul>
 
 
