regen authors file; don't show "back to index" for index

--- a/attr.html
+++ b/attr.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Copyright and Attributions</title>
-<link rel=stylesheet href=se.css>
-<link title="The Java Support Package" rel=prev href=java.html>
-<link title="Typographical Conventions" rel=next href=typo.html>
+<link href=se.css rel=stylesheet>
+<link href=java.html rel=prev title="The Java Support Package">
+<link href=typo.html rel=next title="Typographical Conventions">
 <script src=docs.js></script>
 
 <h1>Copyright and Attributions</h1>
