--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><meta charset=utf-8>
 <title>Selenium Documentation</title>
-<link rel=stylesheet href=se.css>
-<link title="Quick Tour" rel=next href=quick.html>
+<link href=se.css rel=stylesheet>
+<link href=quick.html rel=next title="Quick Tour">
 <script src=docs.js></script>
 
 <body class=front>
