use w3 spec url

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>It provides extensions to emulate user interaction with browsers,
  a distribution server for scaling browser allocation,
  and the infrastructure for implementations of the
- <a href=//w3c.github.com/webdriver>W3C WebDriver specification</a>
+ <a href=//www.w3.org/TR/webdriver/>W3C WebDriver specification</a>
  that lets you write interchangable code for all major web browsers.
 
 <p>The project is made possible by volunteer contributors
