updated doc in toc

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ search_box.submit()</code></pre>
  <li><a href=java.html#the_java_support_package>The Java Support Package</a>
   <ul>
    <li><a href=java.html#working_with_colours>Working With Colours</a>
-   <li><a href=java.html#working_with>Working With</a>
+   <li><a href=java.html#working_with_select_elements>Working With Select Elements</a>
   </ul></li>
 </ul>
 </div>
