formatting json object for configuration to be more readable, hub url does not need to include /grid/register

--- a/grid.html
+++ b/grid.html
@@ -193,7 +193,7 @@
  or both at the same time,
  you use the same <em>selenium-server-standalone.jar</em> file to start the nodes:
 
-<pre><code>java -jar selenium-server-standalone.jar -role node -hub http://localhost:4444/grid/register</code></pre>
+<pre><code>java -jar selenium-server-standalone.jar -role node -hub http://localhost:4444</code></pre>
 
 <p>The port defaults to 5555 if not specified whenever
  the <code>-role</code> option is provided and is not hub.
@@ -225,30 +225,42 @@
 
 <p>And here is an example of a <em>nodeConfig.json</em> file:
 
-<pre><code class=json>{"capabilities": [{"browserName": "firefox",
-  "acceptSslCerts": true,
-  "javascriptEnabled": true,
-  "takesScreenshot": false,
-  "firefox_profile": "",
-  "browser-version": "27",
-  "platform": "WINDOWS",
-  "maxInstances": 5,
-  "firefox_binary": "",
-  "cleanSession": true },
- {"browserName": "chrome",
-  "maxInstances": 5,
-  "platform": "WINDOWS",
-  "webdriver.chrome.driver": "C:/Program Files (x86)/Google/Chrome/Application/chrome.exe" },
- {"browserName": "internet explorer",
-  "maxInstances": 1,
-  "platform": "WINDOWS",
-  "webdriver.ie.driver": "C:/Program Files (x86)/Internet Explorer/iexplore.exe" }],
-"configuration": {"_comment" : "Configuration for Node",
-  "cleanUpCycle": 2000,
-  "timeout": 30000,
-  "proxy": "org.openqa.grid.selenium.proxy.WebDriverRemoteProxy",
-  "port": 5555,
-  "host": ip,
-  "register": true,
-  "hubPort": 4444,
-  "maxSessions": 5}}</code></pre>
+<pre><code class=json>{
+  "capabilities": [
+    {
+      "browserName": "firefox",
+      "acceptSslCerts": true,
+      "javascriptEnabled": true,
+      "takesScreenshot": false,
+      "firefox_profile": "",
+      "browser-version": "27",
+      "platform": "WINDOWS",
+      "maxInstances": 5,
+      "firefox_binary": "",
+      "cleanSession": true 
+    },
+    {
+      "browserName": "chrome",
+      "maxInstances": 5,
+      "platform": "WINDOWS",
+      "webdriver.chrome.driver": "C:/Program Files (x86)/Google/Chrome/Application/chrome.exe"
+    },
+    {
+      "browserName": "internet explorer",
+      "maxInstances": 1,
+      "platform": "WINDOWS",
+      "webdriver.ie.driver": "C:/Program Files (x86)/Internet Explorer/iexplore.exe" 
+    }
+  ],
+  "configuration": {
+    "_comment" : "Configuration for Node",
+    "cleanUpCycle": 2000,
+    "timeout": 30000,
+    "proxy": "org.openqa.grid.selenium.proxy.WebDriverRemoteProxy",
+    "port": 5555,
+    "host": ip,
+    "register": true,
+    "hubPort": 4444,
+    "maxSessions": 5
+  }
+}</code></pre>
