--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <p>Selenium brings together browser vendors, engineers, and enthusiasts
  to further an open discussion around automation of the web platform.
- The project organises <a href=//seleniumconf.org/>an annual conference</a>
+ The project organises <a href=//2016.seleniumconf.in/>an annual conference</a>
  to teach and nurture the community.
 
 <p>At the core of Selenium is <em><a href=wd.html>WebDriver</a></em>,
