--- a/java.html
+++ b/java.html
@@ -110,7 +110,7 @@ selectObject.selectByVisibleText("Bread");</code></pre>
 
 <p>You can then check which options are selected by using:
 
-<pre><code class=java>// Return a WebElement&lt;List&gt; of options that have been selected
+<pre><code class=java>// Return a List&lt;WebElement&gt; of options that have been selected
 List&lt;WebElement&gt; allSelectedOptions = selectObject.getAllSelectedOptions();
 
 // Return a WebElement referencing the first selection option found by walking down the DOM
@@ -119,7 +119,7 @@ WebElement firstSelectedOption = selectObject.getFirstSelectedOption();</code></
 <p>Or you may just be interested in what &lt;option&gt; elements
  the &lt;select&gt; element contains:
 
-<pre><code class=java>// Return a WebElement&lt;List&gt; of options that the &lt;select&gt; element contains
+<pre><code class=java>// Return a List&lt;WebElement&gt; of options that the &lt;select&gt; element contains
 List&lt;WebElement&gt; allAvailableOptions = selectObject.getOptions();</code></pre>
 
 <p>If you then want to deselect any elements you now have four options:
@@ -140,3 +140,7 @@ selectObject.deselectAll();</code></pre>
  you can find out if your &lt;select&gt; element is one of these by using:
 
 <pre><code class=java>Boolean doesThisAllowMultipleSelections = selectObject.isMultiple();</code></pre>
+
+<h2 class=mouse_and_keyboard_actions_in_detail>Mouse and Keyboard actions in detail</h2>
+
+<h2 class=working_with_webelements>Working with WebElements</h2>
