Add headers in install.html for indication of further expansion

--- a/install.html
+++ b/install.html
@@ -7,3 +7,9 @@
 <script src=docs.js></script>
 
 <h1>Selenium Installation</h1>
+
+
+<h2>Using standalone jar</h2>
+
+
+<h2>Including selenium as Maven dependency</h2>
